--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 	<title>Is Dummy Thicc?</title>
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-72010448-5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-72010448-5');
+	</script>
+
 </head>
 
 <body>
@@ -25,15 +38,20 @@
 				<div><b><em>YOURPROJECT.is-dummy-thi.cc</em></b> or <b><em>YOURUSER.is-dummy-thi.cc</em></b></div>
 			</li>
 			<li>Wait up to 24 hours for your new domain to take effect</li>
-			<li>Go to <b><em>YOURPROJECT.is-dummy-thi.cc</em></b> and ensure it's working. If it isn't, check your <b><em>CNAME</em></b> file
-			or the GitHub repository settings.</li>
+			<li>Go to <b><em>YOURPROJECT.is-dummy-thi.cc</em></b> and ensure it's working. If it isn't, check your
+				<b><em>CNAME</em></b> file
+				or the GitHub repository settings.</li>
 			<li>Profit! <small>and make sure to share this service or maybe donate :)</small></li>
 		</ol>
 		<h2>Are you happy now?</h2>
-		<p>If so, please share this with all your homies and colleague and <a href="https://www.paypal.com/pools/c/8e7mLy8M8U"><b>consider donating</b></a>. This is a completely free service powered by a flaw in GitHub Pages
+		<p>If so, please share this with all your homies and colleague and <a
+				href="https://www.paypal.com/pools/c/8e7mLy8M8U"><b>consider donating</b></a>. This is a completely free service
+			powered by a flaw in GitHub Pages
 			and a high quality domain from our bois at Namecheap <small>(sponsor us)</small>.
 		</p>
-		<small><p>If you aren't happy, leave this page smh. What do you want us to do? Fix your marriage?</p></small>
+		<small>
+			<p>If you aren't happy, leave this page smh. What do you want us to do? Fix your marriage?</p>
+		</small>
 		<br>
 		<p style="text-align:center">Brought to you by the Dummy Thicc people.</p>
 	</div>
