--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<h1 id="title">is-dummy-thi.cc</h1>
 	<div class="page">
-		<p id="quote"><em>"If thou do not chance they super-thiccness, thou'll ne'er be dummy thicc"</em></p>
+		<p id="quote"><em>"If thou do not chance thy super-thiccness, thou'll never be dummy thicc."</em></p>
 		<p id="author"><em>- Edgar Allen Einstein</em></p>
 		<br>
 		<h1>Want your own is-dummy-thi.cc domain?</h1>
