Added Hall of Fame, We are GoDaddy

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <body>
 	<h1 id="title">is-dummy-thi.cc</h1>
 	<div class="page">
-		<p id="quote"><em>"If thou do not chance thy super-thiccness, thou'll never be dummy thicc."</em></p>
+		<p id="quote"><em>"If thou not dare chance thy super-thiccnes, thy'll never be dummy thicc."</em></p>
 		<p id="author"><em>- Edgar Allen Einstein</em></p>
 		<br>
 		<h1>Want your own is-dummy-thi.cc domain?</h1>
-		<b>It's Freeeeeeee and easy AF. Just follow these steps:</b>
+		<b>It's dummy cheap(free) and hella easy. Just follow these steps:</b>
 		<ol>
 			<li>Set up a <a href="https://github.com">GitHub</a> account if you haven't already</li>
 			<li>Create a new <a href="https://pages.github.com">GitHub Pages</a> site for a project or for your
@@ -53,7 +53,13 @@
 			<p>If you aren't happy, leave this page smh. What do you want us to do? Fix your marriage?</p>
 		</small>
 		<br>
-		<p style="text-align:center">Brought to you by the Dummy Thicc people.</p>
+		<h2>Hall of Dummy</h2>
+		Our donators and notable users:
+		<ul>
+			<li><a href="https://hopson.is-dummy-thi.cc">Hopson</a></li>
+		</ul>
+		<!--Javid Soon?!-->
+		<p style="text-align:center"><small>Brought to you by GoDummy and Secured by Cloudflare</small></p>
 	</div>
 </body>
 
