--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<ul>
 			<li><a href="https://hopson.is-dummy-thi.cc">Hopson</a></li>
 		</ul>
-		<!--Javid Soon?!-->
+		<!--Javid Soon?! Your mum gay lol! -->
 		<p style="text-align:center"><small>Brought to you by GoDummy and Secured by Cloudflare</small></p>
 	</div>
 </body>
