--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<title>Is Dummy Thicc?</title>
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
-
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-72010448-5"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -16,7 +15,7 @@
 
 		gtag('config', 'UA-72010448-5');
 	</script>
-
+	<meta name="cf-2fa-verify" content="f5c573659f1234e">
 </head>
 
 <body>
@@ -58,7 +57,7 @@
 		<ul>
 			<li><a href="https://hopson.is-dummy-thi.cc">Hopson</a></li>
 		</ul>
-		<!--Javid Soon?! Your mum gay lol! -->
+
 		<p style="text-align:center"><small>Brought to you by GoDummy and Secured by Cloudflare</small></p>
 	</div>
 </body>
