--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 			<p>If you aren't happy, leave this page smh. What do you want us to do? Fix your marriage?</p>
 		</small>
 		<br>
-		<h2>Hall of Dummy</h2>
+		<!–– <h2>Hall of Dummy</h2>
 		Our donators and notable users:
 		<ul>
 			<li><a href="https://hopson.is-dummy-thi.cc">Hopson</a></li>
-		</ul>
+		</ul> ––>
 
 		<p style="text-align:center"><small>Brought to you by GoDummy and Secured by Cloudflare</small></p>
 	</div>
