Updated for the new decade

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Is Dummy Thicc?</title>
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-72010448-5"></script>
 	<script>
@@ -20,18 +20,33 @@
 
 <body>
 	<h1 id="title">is-dummy-thi.cc</h1>
+	<h2 id="title" style="font-size: 24px;">free custom domain service</h2>
 	<div class="page">
-		<p id="quote"><em>"If thou not dare chance thy super-thiccnes, thy'll never be dummy thicc."</em></p>
-		<p id="author"><em>- Edgar Allen Einstein</em></p>
+		<p id="quote"><em>"Insanely Stunning."</em></p>
+		<p id="author"><em>- Steve Gates</em></p>
 		<br>
-		<h1>Want your own is-dummy-thi.cc domain?</h1>
-		<b>It's dummy cheap(free) and hella easy. Just follow these steps:</b>
+		<h1>Get Psyched.</h1>
+		<h2>Power to the people.</h2>
+		<p> From this point on, you'll finally have a domain that doesn't just represent you, but truly
+			<i>is</i> you. At GoDummy, we've been working hard to develop the single most perfect domain
+			hack in the history of networked computing and today we are proud to make it free for all.
+			is-dummy-thi.cc has been built from the ground up for every single person and every single need.
+		</p>
+		<h2>The next big thing.</h2>
+		<p>Namecheap and Cloudflare. DNS. Github! HTML... The World Wide Web? The Cloud? <i>Big Data</i>!
+			<br>If we say enough buzzwords, they will soon become devoid of all meaning. Coincidentally, These are 
+			the technologies behind is-dummy-thi.cc and, here at GoDummy, we are proud of it. 40 years of computing 
+			innovation has come down to this singular moment... the moment you went with GoDummy.</p>
+
+		<h1>What are you waiting for?</h1>
+		<b>Completely Free. Forever. <br> Simply follow these steps:</b>
 		<ol>
 			<li>Set up a <a href="https://github.com">GitHub</a> account if you haven't already</li>
 			<li>Create a new <a href="https://pages.github.com">GitHub Pages</a> site for a project or for your
 				user/organization.
 				You can also use an existing GitHub Pages Site.</li>
-			<li>Create a new <b><em>CNAME</em></b> file in the root directory of the repository and put the domain you'd like
+			<li>Create a new <b><em>CNAME</em></b> file in the root directory of the repository and put the domain you'd
+				like
 				to use
 				in the form
 				<div><b><em>YOURPROJECT.is-dummy-thi.cc</em></b> or <b><em>YOURUSER.is-dummy-thi.cc</em></b></div>
@@ -42,23 +57,21 @@
 				or the GitHub repository settings.</li>
 			<li>Profit! <small>and make sure to share this service or maybe donate :)</small></li>
 		</ol>
+
 		<h2>Are you happy now?</h2>
-		<p>If so, please share this with all your homies and colleague and <a
-				href="https://www.paypal.com/pools/c/8e7mLy8M8U"><b>consider donating</b></a>. This is a completely free service
-			powered by a flaw in GitHub Pages
-			and a high quality domain from our bois at Namecheap <small>(sponsor us)</small>.
+		<p>If so, please share this with all your homies and colleagues and <a
+				href="https://www.paypal.com/pools/c/8e7mLy8M8U"><b>consider donating</b></a>. This is a completely free
+			service
+			built on top of GitHub Pages
+			and a high quality domain from our bois at Namecheap <small>(sponsor us pls thx)</small>.
 		</p>
 		<small>
-			<p>If you aren't happy, leave this page smh. What do you want us to do? Fix your marriage?</p>
+			<p>If you aren't happy, leave this page. What do you want us to do? Fix your marriage?</p>
 		</small>
 		<br>
-		<!-- <h2>Hall of Dummy</h2>
-		Our donators and notable users:
-		<ul>
-			<li><a href="https://hopson.is-dummy-thi.cc">Hopson</a></li>
-		</ul> -->
 
 		<p style="text-align:center"><small>Brought to you by GoDummy and Secured by Cloudflare</small></p>
+		<p style="text-align:center"><small>Copyright © 2020 The GoDummy Group. All rights reserved.</small></p>
 	</div>
 </body>
 
