--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 		gtag('config', 'UA-72010448-5');
 	</script>
 	<meta name="cf-2fa-verify" content="f5c573659f1234e">
+	<meta charset="UTF-8">
+	<meta name="description" content="is-dummy-thi.cc: next generation free domains">
+	<meta name="keywords" content="WWW, Cloud, Github, Domains, DNS">
+	<meta name="author" content="GoDummy Group">
+	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 
 <body>
