added more buzzwords

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			is-dummy-thi.cc has been built from the ground up for every single person and every single need.
 		</p>
 		<h2>The next big thing.</h2>
-		<p>Namecheap and Cloudflare. DNS. Github! HTML... The World Wide Web? The Cloud? <i>Big Data</i>!
+		<p>Namecheap and Cloudflare. DNS. Github! HTML... The World Wide Web? The Cloud(IoT)? Big Data!
 			<br>If we say enough buzzwords, they will soon become devoid of all meaning. Coincidentally, These are 
 			the technologies behind is-dummy-thi.cc and, here at GoDummy, we are proud of it. 40 years of computing 
 			innovation has come down to this singular moment... the moment you went with GoDummy.</p>
